--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
-    "axios": "^1.4.0",
     "daisyui": "^2.51.6",
     "next": "13.1.1",
     "postcss": "8.4.23",
@@ -23,6 +22,8 @@
     "standard": "^17.0.0"
   },
   "eslintConfig": {
-    "extends": ["./node_modules/standard/eslintrc.json"]
+    "extends": [
+      "./node_modules/standard/eslintrc.json"
+    ]
   }
 }
